--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deck.gl": "^8.6.6",
     "firebase": "^8.6.8",
     "formik": "^2.2.9",
+    "mapbox-gl": "^2.6.1",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
